# cferates

./: .gitignore  README  README.md  default.nix  pyproject.toml  setup.cfg  shell.nix
cferates/: __init__.py  _cli_cache.py  base_types.py  cli.py
cferates/scraper/: __init__.py  base.py  domestic.py  industrial.py
tests/: test_cferates.py
