[tool.poetry]
name = "cferates"
version = "0.1.0"
description = "A Python library and CLI tool to scrape energy prices from the Mexico CFE (Comisión Federal de Electricidad) website."
authors = ["Joel Rivera <rivera@joel.mx>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^5.1.0"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cferates = "cferates.cli:main"
