[project]
name = "cferates"
version = "0.1.0"
description = "A Python library and CLI tool to scrape energy prices from the Mexico CFE (Comisión Federal de Electricidad) website."
readme = "README.md"
authors = [
    { name = "Joel Rivera", email = "rivera@joel.mx" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.1",
    "lxml>=5.1.0",
    "beautifulsoup4>=4.11.1",
    "click>=8.1.3",
]

[project.scripts]
cferates = "cferates.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
