[bdist_wheel]
universal = 1

[metadata]
name = cferates
version = 0.1.0
author = Joel Rivera
author_email = rivera@joel.mx
description = file: README

[options]
python_requires = >=3.7
packages = find:
install_requires =
    requests
    lxml
    beautifulsoup4
    click

[options.entry_points]
console_scripts =
    cferates = cferates.cli:main
